--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash.merge": "^4.6.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.4"
   },
