--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "ts-jest": "^29.0.4"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.1.0",
     "@types/node": "^18.11.9",
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.20",
     "prisma": "^4.6.1",
+    "prisma-erd-generator": "^1.7.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
