--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.0.4"
+    "ts-jest": "^29.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^10.1.0",
