--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jest-html-reporter": "^3.7.0",
     "jsonwebtoken": "^8.5.1",
     "lodash.merge": "^4.6.2",
+    "mailtrap": "^3.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "supertest": "^6.3.3",
